# full-text-search-rust

./: Cargo.toml  README.md
src/: document.rs  index.rs  lib.rs  main.rs  tokenizer.rs  utils.rs
src/analyzer/: filters.rs  mod.rs  tokenizer.rs
src/search/: index.rs
