[package]
authors = ["kyle nguyen <ngockhanh5794@gmail.com>"]
edition = "2018"
name = "full-text-search"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = {version = "1.0.17", features = ["zlib"], default-features = false}
lazy_static = "1.4.0"
quick-xml = {version = "0.17", features = ["serialize"]}
rust-stemmers = "1.2.0"
serde = {version = "1.0.116", features = ["derive"]}
croaring = "0.4.5"